<resources>
    <string name="app_name">Emergency Contacts</string>
    <string name="welcome_tv">Bem vindo</string>
    <string name="login">Login</string>
    <string name="password">Senha</string>
    <string name="login_action">Entrar</string>
    <string name="register_action">Novo</string>
    <string name="password_recovery_action">Esqueceu a senha?</string>
    <string name="register_tv">Novo Usuário</string>
    <string name="name">Nome</string>
    <string name="user">Usuário</string>
    <string name="email">E-mail</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string name="keep_logged">Manter Logado?</string>
    <string name="dark_theme">Tema escuro?</string>
    <string name="create">Criar</string>
    <string name="telephone_icon">Icone de telefone</string>
    <string name="call">Ligar</string>
    <string name="change_contacts">Mudar Contatos</string>
    <string name="profile">Perfil</string>
    <string name="register_validate_error_message">You must fill all fields.</string>
    <string name="search_icon">Icone de pesquisa</string>
    <string name="your_contacts">Seus contatos?</string>
    <string name="search">Buscar</string>
    <string name="add_contact_icon">Icone adiciona contato</string>
    <string name="update_user">Alterar Dados</string>
    <string name="update">Modificar</string>
    <string name="confirm_add_contact">Deseja adicionar este contato para emergencias?</string>
    <string name="add_contact">Adicionar contato</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="contact_full_list_error">Contact list is already full!</string>
    <string name="delete">Deletar</string>
    <string name="remove_contact">Remove contact</string>
    <string name="confirm_remove_contact">Are you sure you want to remove the contact?</string>
    <string name="logout">Logout</string>
</resources>