<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_user_sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".ui.activity.UpdateUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/activity_update_user_bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_update_user_cl_form"
            app:menu="@menu/activity_main_bottom_actions" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_update_user_cl_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="16dp"
            android:background="#88FCD3C6"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/activity_update_user_bottom_navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/activity_update_user_tv_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:text="@string/update_user"
                android:textAlignment="center"
                android:textColor="#FF5722"
                android:textColorLink="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_update_til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.563"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_update_user_tv_banner">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_update_user_edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textCapWords"
                    android:textAlignment="viewStart"
                    android:textColor="#FF5722"
                    android:textColorLink="#FFFFFF"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_update_user_til_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.563"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_update_til_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_update_user_edt_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/user"
                    android:inputType="textPersonName"
                    android:textAlignment="viewStart"
                    android:textColor="#FF5722"
                    android:textColorLink="#FFFFFF"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_update_user_til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.563"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_update_user_til_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_update_user_edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart"
                    android:textColor="#FF5722"
                    android:textColorLink="#FFFFFF"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_update_til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.563"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_update_user_til_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_update_user_edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/email"
                    android:textAlignment="viewStart"
                    android:textColor="#FF5722"
                    android:textColorLink="#FFFFFF"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/activity_update_user_sw_keep_logged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:showText="false"
                android:text="@string/keep_logged"
                android:textColor="#FF5722"
                android:textOff="@string/no"
                android:textOn="@string/yes"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/activity_update_til_email"
                app:layout_constraintTop_toBottomOf="@+id/activity_update_til_email" />

            <Button
                android:id="@+id/activity_update_user_btn_update"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="30dp"
                android:background="#FF5722"
                android:text="@string/update"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.563"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_update_user_sw_keep_logged" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

